--- a/.i3/config
+++ b/.i3/config
@@ -158,25 +158,23 @@ exec --no-startup-id xscreensaver -no-splash
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
-        status_command i3status
-                colors {
-                        # solarized
-                        background #073642
-                        statusline #eee8d5
-                        focused_workspace #cb4b16 #cb4b16 #eee8d5
-                        active_workspace #cb4b16 #cb4b16 #eee8d5
-                        inactive_workspace #b58900 #b58900 #eee8d5
-                }
+  status_command i3status
+  colors {
+    separator #666666
+    background #222222
+    statusline #dddddd
+    focused_workspace #0088CC #0088CC #ffffff
+    active_workspace #333333 #333333 #ffffff
+    inactive_workspace #333333 #333333 #888888
+    urgent_workspace #2f343a #900000 #ffffff
+  }
 }
-#client.focused          #da2263 #d70a53 #ffffff #eb709b
-#client.focused_inactive #565656 #444444 #ffffff #666666
-#client.unfocused        #373737 #222222 #888888 #444444
-#client.urgent           #ec7ea4 #eb709b #ffffff #eb709b
+#
+#
+#
+#
 #
 # class                 border  backgr. text    indicator
- client.focused          #859900 #859900 #fdf6e3 #2e9ef4
- client.focused_inactive #268bd2 #268bd2 #fdf6e3 #484e50
- client.unfocused        #333333 #93a1a1 #fdf6e3 #292d2e
 #
  exec xsetroot -solid "#e1dce0"
 
@@ -192,4 +190,8 @@ for_window [class="^Spotify$"] floating enable
  bindcode 232 exec --no-startup-id xbacklight -dec 10
  bindcode 233 exec --no-startup-id xbacklight -inc 10
  bindcode 237 exec --no-startup-id toggle.sh /sys/devices/platform/samsung/leds/samsung\:\:kbd_backlight/brightness 5
- bindcode 238 exec --no-startup-id toggle.sh /sys/devices/platform/samsung/leds/samsung\:\:kbd_backlight/brightness 5  
+ bindcode 238 exec --no-startup-id toggle.sh /sys/devices/platform/samsung/leds/samsung\:\:kbd_backlight/brightness 5
+client.focused #0088CC #0088CC #ffffff #dddddd
+client.focused_inactive #333333 #333333 #888888 #292d2e
+client.unfocused #333333 #333333 #888888 #292d2e
+client.urgent #2f343a #900000 #ffffff #900000
