--- a/.i3/config
+++ b/.i3/config
@@ -31,8 +31,8 @@ floating_modifier $mod
 bindsym $mod+Return exec xfce4-terminal
 
 #enable alt+tab
-bindsym $Alt+Tab focus right
-bindsym $Alt+Shift+Tab focus left
+#bindsym $Alt+Tab focus right
+#bindsym $Alt+Shift+Tab focus left
 
 # kill focused window
 bindsym $mod+Shift+q kill
@@ -95,23 +95,23 @@ bindsym $mod+a focus parent
 #bindsym $mod+d focus child
 
 # switch to workspace
-bindsym $mod+1 workspace 1
-bindsym $mod+2 workspace 2
-bindsym $mod+3 workspace 3
-bindsym $mod+4 workspace 4
-bindsym $mod+5 workspace 5
-bindsym $mod+6 workspace 6
-bindsym $mod+7 workspace 7
-bindsym $mod+8 workspace 8
-bindsym $mod+9 workspace 9
+bindsym $mod+1 workspace 1 www
+bindsym $mod+2 workspace 2 term
+bindsym $mod+3 workspace 3 work
+bindsym $mod+4 workspace 4 code
+bindsym $mod+5 workspace 5 misc
+bindsym $mod+6 workspace 6 
+bindsym $mod+7 workspace 7 
+bindsym $mod+8 workspace 8 
+bindsym $mod+9 workspace 9 
 bindsym $mod+0 workspace 10
 
 # move focused container to workspace
-bindsym $mod+Shift+1 move container to workspace 1
-bindsym $mod+Shift+2 move container to workspace 2
-bindsym $mod+Shift+3 move container to workspace 3
-bindsym $mod+Shift+4 move container to workspace 4
-bindsym $mod+Shift+5 move container to workspace 5
+bindsym $mod+Shift+1 move container to workspace 1 www
+bindsym $mod+Shift+2 move container to workspace 2 term
+bindsym $mod+Shift+3 move container to workspace 3 work
+bindsym $mod+Shift+4 move container to workspace 4 code
+bindsym $mod+Shift+5 move container to workspace 5 misc
 bindsym $mod+Shift+6 move container to workspace 6
 bindsym $mod+Shift+7 move container to workspace 7
 bindsym $mod+Shift+8 move container to workspace 8
@@ -154,7 +154,7 @@ bindsym $mod+r mode "resize"
 exec --no-startup-id nm-applet
 exec --no-startup-id ~/.i3/autostart.sh
 exec --no-startup-id xscreensaver -no-splash
-
+exec --no-startup-id compton -b
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
@@ -176,7 +176,7 @@ bar {
 #
 # class                 border  backgr. text    indicator
 #
- exec xsetroot -solid "#e1dce0"
+ exec xsetroot -solid "#67677a"
 
 # set application specific options
 # # use 'xprop' or 'xwininfo' to get window information
@@ -187,8 +187,8 @@ for_window [class="^Spotify$"] floating enable
  bindcode 121 exec --no-startup-id amixer set Master toggle -q
  bindcode 122 exec --no-startup-id amixer set Master 10%- unmute -q
  bindcode 123 exec --no-startup-id amixer set Master 10%+ unmute -q
- bindcode 232 exec --no-startup-id xbacklight -dec 10
- bindcode 233 exec --no-startup-id xbacklight -inc 10
+ bindcode 232 exec --no-startup-id xbacklight -dec 5
+ bindcode 233 exec --no-startup-id xbacklight -inc 5
  bindcode 237 exec --no-startup-id toggle.sh /sys/devices/platform/samsung/leds/samsung\:\:kbd_backlight/brightness 5
  bindcode 238 exec --no-startup-id toggle.sh /sys/devices/platform/samsung/leds/samsung\:\:kbd_backlight/brightness 5
 client.focused #0088CC #0088CC #ffffff #dddddd
