--- a/.i3/config
+++ b/.i3/config
@@ -28,7 +28,8 @@ floating_modifier $mod
 
 # start a terminal
 #bindsym $mod+Return exec i3-sensible-terminal
-bindsym $mod+Return exec xfce4-terminal
+#bindsym $mod+Return exec xfce4-terminal
+bindsym $mod+Return exec urxvt
 
 #enable alt+tab
 #bindsym $Alt+Tab focus right
@@ -152,9 +153,11 @@ mode "resize" {
 bindsym $mod+r mode "resize"
 #autostart
 exec --no-startup-id nm-applet
+exec --no-startup-id samsung-tools -n
 exec --no-startup-id ~/.i3/autostart.sh
 exec --no-startup-id xscreensaver -no-splash
 exec --no-startup-id compton -b --backend glx --vsync opengl-swc
+exec --no-startup-id feh --bg-scale ~/.bg-png
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
@@ -176,12 +179,13 @@ bar {
 #
 # class                 border  backgr. text    indicator
 #
- exec xsetroot -solid "#67677a"
 
 # set application specific options
 # # use 'xprop' or 'xwininfo' to get window information
 for_window [class="Xfce4-terminal"] border 1pixel
+for_window [class="Chromium"] border 1pixel
 for_window [class="^Spotify$"] floating enable
+for_window [class="URxvt"] border 1pixel
 
  #keymap
  bindcode 121 exec --no-startup-id amixer set Master toggle -q && killall -SIGINT i3blocks
