--- a/.i3/config
+++ b/.i3/config
@@ -39,12 +39,14 @@ bindsym $mod+Return exec urxvt
 bindsym $mod+Shift+q kill
 
 # start dmenu (a program launcher)
-bindsym $mod+d exec dmenu_run
+#bindsym $mod+d exec dmenu_run
+bindsym $mod+d exec echo -e "chromium\nfirefox\ngvim" | dmenu_run
 # There also is the (new) i3-dmenu-desktop which only displays applications
 # shipping a .desktop file. It is a wrapper around dmenu, so you need that
 # installed.
 # bindsym $mod+d exec --no-startup-id i3-dmenu-desktop
-
+#move workspaces
+bindsym $mod+x move workspace to output right
 # change focus
 bindsym $mod+j focus left
 bindsym $mod+k focus down
@@ -152,12 +154,12 @@ mode "resize" {
 
 bindsym $mod+r mode "resize"
 #autostart
-exec --no-startup-id nm-applet
+#exec --no-startup-id nm-applet
 exec --no-startup-id samsung-tools -n
 exec --no-startup-id ~/.i3/autostart.sh
 exec --no-startup-id xscreensaver -no-splash
 exec --no-startup-id compton -b --backend glx --vsync opengl-swc
-exec --no-startup-id feh --bg-scale ~/.bg-png
+exec --no-startup-id feh --bg-scale ~/.bg.png
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
