--- a/.i3blocks.conf
+++ b/.i3blocks.conf
@@ -62,9 +62,10 @@ signal=10
 [volume]
 label=♪
 command=/usr/libexec/i3blocks/volume
+instance=Master
 interval=5
 signal=10
 
 [time]
 command=date '+%Y-%m-%d %H:%M:%S'
-interval=1
+interval=5
