--- a/.i3blocks.conf
+++ b/.i3blocks.conf
@@ -2,12 +2,13 @@ separator_block_width=15
 
 
 [memory]
-label=MEM
-command=/usr/libexec/i3blocks/memory
+label=
+command=/usr/lib/i3blocks/memory
 interval=30
 
 [disk]
-command=/usr/libexec/i3blocks/disk /
+label=
+command=/usr/lib/i3blocks/disk /
 interval=30
 
 #[wireless]
@@ -24,7 +25,7 @@ interval=30
 #interval=5
 
 [wireless]
-label=W
+label=
 command=/usr/libexec/i3blocks/wifi
 interval=5
 
@@ -44,24 +45,25 @@ interval=5
 ##separator=false
 
 [load]
-command=/usr/libexec/i3blocks/load_average
+label=
+command=/usr/lib/i3blocks/load_average
 interval=10
 
 [battery]
 label=BAT
-label=⚡
-command=/usr/libexec/i3blocks/battery BAT0
+label=
+command=/usr/lib/i3blocks/battery BAT0
 interval=5
 
 [brightness]
-label=☀
+label=
 command=/usr/libexec/i3blocks/bright
 interval=5
 signal=10
 
 [volume]
-label=♪
-command=/usr/libexec/i3blocks/volume
+label=
+command=/usr/lib/i3blocks/volume
 instance=Master
 interval=5
 signal=10
